Fix page breaks in Ch2

--- a/assets/paged.scss
+++ b/assets/paged.scss
@@ -48,7 +48,8 @@ div.footnotes {
   overflow: hidden;
 }
 
-.pagedjs_blank_page .pagedjs_margin-content {
+.pagedjs_blank_page .pagedjs_margin-content,
+.chapter-head .pagedjs_margin-top-center {
   display: none;
 }
 
